gke-fleets-with-argocd/argo-cd-gke/overlays/gke_ingress/argocd-server-deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    spec:
      containers:
      - name: argocd-server
        command:
        - argocd-server
        - --redis
        - argocd-redis-ha-haproxy:6379
        - --insecure
        - --staticassets
        - /shared/app
