gke-fleets-with-argocd/argo-cd-gke/overlays/gke_ingress/argocd-server-svc_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"ports": {"http":"argocd-backend-config"}}'
spec:
  type: ClusterIP
  ports:
  - $patch: delete
    name: https
    port: 443
    protocol: TCP
    targetPort: 8080
